TreeNode, TimeMeter improvements